Contact - Fixing bug

--- a/contact.html
+++ b/contact.html
@@ -137,11 +137,10 @@
           <p class="contactDetailsSection__container__number">03</p>
         </div>
       </section>
-        <br>
+      <section class="mapSection">
         <div>
           <img src="./src/assets/images/maps.jpg" width="100%" alt="Mapa">
         </div>
-      </section>
       <section class="contactFormSection">
         <div class="contactFormSection__firstContainer">
           <div class="contactFormSection__firstContainer__input">
